# autonomesSegeln

./: README.md
autopilot/: .gitignore  .gitlab-ci.yml  README.md
autopilot/.config/: c_cpp_properties.json
autopilot/ROMFS/px4fmu_common/init.d/: CMakeLists.txt  (+3 more)
autopilot/msg/: AutopilotDebugInfo.msg  AutopilotStatus.msg  CMakeLists.txt  Dummy.msg  SandYachtCommand.msg  SandYachtCourse.msg  SandYachtLandConfig.msg  SandYachtNetworkStatus.msg  SandYachtSensors.msg  SandYachtStatus.msg  SandYachtWindDir.msg  SandYachtWindSpeed.msg  SandYachtWingDir.msg  WindDirection.msg  WindSpeed.msg  WingDirection.msg
autopilot/src/drivers/: drv_sensor.h
autopilot/src/modules/sand_yacht_clifton_control/: Ackermann.cpp  Ackermann.hpp  Brake.cpp  Brake.hpp  CMakeLists.txt  DrivingSystem.cpp  DrivingSystem.hpp  Kconfig  SandYachtCliftonControl.cpp  SandYachtCliftonControl.hpp
autopilot/src/modules/sand_yacht_clifton_control/Autopilot/: Autopilot.cpp  Autopilot.hpp  CMakeLists.txt
frontend/: .gitlab-ci.yml  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: endpoints.ts  services.ts
frontend/src/assets/: colors.css
frontend/src/components/: Button.vue  CliftonStatus.vue  ControlTuningANDViewPanel.vue  Debug.vue  HeadingDisplay.vue  LegendSidebar.vue  RouteDisplay.vue  WindDisplay.vue  WingDisplay.vue
frontend/src/map-downloader/: map-downloaderv2.cjs
frontend/src/utils/: data.ts  debugState.ts  errorHandler.ts  toastService.ts
laptop/: .gitlab-ci.yml  .gitmodules  README.md  pom.xml
(+86 files in other folders)
